--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <a class="navbar-brand" href="#">Dating App</a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf='loggedIn()' class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -11,19 +11,17 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" (click)='logout()'>Logout</a>
-        </li>
+
     </ul>
 
-    <div *ngIf='loggedIn()' class="dropdown">
-        <button class="dropdown-toggle text-light">
-         Welcome User
-        </button>
-        <div class="dropdown-menu">
+    <div *ngIf='loggedIn()' class="dropdown" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>
+             Welcome {{loginUser | titlecase}}
+        </a>
+        <div class="dropdown-menu mt-3" *dropdownMenu>
           <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+          <a class="dropdown-item" (click)='logout()'><i class="fa fa-sign-out"></i>Logout</a>
         </div>
       </div>
 
