Build edit profile, applied CanDeactivate route guard,  HostListener and ViewChild. Then persist changes to API

--- a/DatingApp-SPA/src/app/lists/lists.component.html
+++ b/DatingApp-SPA/src/app/lists/lists.component.html
@@ -1,3 +1,4 @@
-<p>
-  lists works!
-</p>
+<div>
+  {{showEntry?.id}} {{showEntry?.firstname}}
+  <input type="text" [(ngModel)]="showEntry.id">
+</div>
