--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,18 +1,30 @@
 <form #registerForm="ngForm" (ngSubmit)='register()'>
-    <h2 class="text-center text-primary">Sign Up</h2>
-    <hr>
+  <h2 class="text-center text-primary">Sign Up</h2>
+  <hr>
 
-    <div class="form-group">
-      <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Username">
-    </div>
+  <div class="form-group">
+    <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Username">
+  </div>
 
-    <div class="form-group">
-      <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="Password">
-    </div>
+  <div class="form-group">
+    <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="Password">
+  </div>
 
-    <div class="form-group text-center">
-      <button class="btn btn-success mr-2" type="submit">Register</button>
-      <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
-    </div>
+  <div class="form-group text-center">
+    <button class="btn btn-success mr-2" type="submit">Register</button>
+    <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-default mr-2" type="button" (click)="addNew()">AddNew</button>
+    <button class="btn btn-default mr-2" type="button" (click)="onShowModel()">Show model</button>
+  </div>
 
-  </form>
+</form>
+
+<div>
+
+</div>
+
+
+<div *ngFor="let item of myChildModel">
+  <input type="text" [(ngModel)]="item.id">
+  <app-lists [showEntry]="item"></app-lists>
+</div>
