--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -34,7 +34,7 @@
               <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Interest">
-                <p>Messages will go here</p>
+               <app-interest></app-interest>
           </tab>
         </tabset>
       </div>
